--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
-@use "./reset.scss";
-@use "./windows-classes.scss";
-@use "./fonts.scss"; 
 @use "./colors.scss";
+@use "./reset.scss";
+@use "./fonts.scss";
+@use "./windows-classes.scss";
 
 @include reset.init();
 
@@ -118,14 +118,14 @@ section {
         content: '';
         position: absolute;
         inset: 0;
-        background-image: url('../src/images/hero-background.png');
+        background-image: url('../src/image/hero-background.png');
         background-size: cover;
         background-position: right;
         z-index: -1;
     }
 }
 
-.btn {
+.button {
     @include typography.typography-display-medium;
     padding: 24px;
     border-radius: 16px;
@@ -141,7 +141,7 @@ section {
     }
 }
 
-.section-desc {
+.section-description {
     padding-block: 64px;
     grid-auto-rows: 1fr;
     gap: 16px;
@@ -151,7 +151,7 @@ section {
     @include window-classes.on-large {
         grid-auto-rows: unset;
         gap: 0;
-        padding-block: 100px;     
+        padding-block: 100px;
     }
 
 
@@ -164,6 +164,7 @@ section {
         @include window-classes.on-medium {
             grid-column: span 8;
         }
+
         @include window-classes.on-large {
             grid-column: span 5;
         }
@@ -177,8 +178,6 @@ section {
         &--on-blue{
             grid-column: unset;
         }
-
-
     }
 
     &__content {
@@ -200,6 +199,7 @@ section {
         @include window-classes.on-medium {
             grid-column: span 8;
         }
+
         @include window-classes.on-large {
             grid-column: 7 / span 6;
         }
@@ -243,7 +243,7 @@ section {
     }   
 }
 
-.section-statement {
+.section-slogan {
     display: grid;
     place-items: center;
     padding-block: 64px;
@@ -270,8 +270,6 @@ section {
         padding: 100px 156px;
     }
 
-   
-
     h3 {
         @include typography.typography-headline-largest;
     }
@@ -296,6 +294,7 @@ section {
         @include window-classes.on-medium {
             grid-column: span 8;
         }
+
         @include window-classes.on-large {
             grid-column: span 12;
         }
@@ -316,6 +315,7 @@ section {
             grid-column: 9 / span 4;
         }
     }
+
     p {
         @include typography.typography-body-medium;
     }
